--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "pouchdb": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
